# clock-nyc

./: .env.example  .gitignore  01_fetch_data.py  02_create_db.py  03_classify_auto.py  03_classify_gui.html  03_classify_manual.py  04_export_approved.py  05a_download_approved_pano.py  05b_correct_approved_pano.py  README.md  check_approved.py  classifier_gui.py  index.html  main.py  pyproject.toml  utils.py
data/: 04-get-stats.py
public/: env.example.js  env.js  gallery.html  index.html  make_clock_favicon.js  street_time_approved.db  street_time_corrected.db  street_time_corrected.db-shm  street_time_corrected.db-wal  utils.js
